vlib/v/checker/tests/result_missing_propagate_err.vv
fn result() !int {
	return 1
}

fn main() {
	a := result()
	println(a)
}
